# anime-get

./: .gitignore  README.md  anime_get.py  setup.cfg  setup.py
anime_get/: main.py
main/: anime_get.py
