[metadata]
name = anime-get
author = minomushi
version = 0.0.1
description = Get information of anime
long_description = file: README.md
url = https://github.com/mino-38/anime-get

[options]
install_requires =
    requests
packages = find:

[options.entry_points]
console_scripts =
    anime-get = anime_get.main:main